--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=user-service-microservice
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tcg-user-db
+
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.baselineOnMigrate = true
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.main.allow-bean-definition-overriding=true
+
+server.port=9098
+
+
+
+server.error.include-message = always
