--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -1,33 +1,33 @@
-name: Java CI/CD Pipeline  # Name of the pipeline
+name: Java CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Runs when code is pushed to 'main' branch
-  pull_request:  # Runs when a pull request is created
+      - main
+  pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Runs on a fresh Ubuntu machine
-
-    env:
-      SPRING_PROFILES_ACTIVE: local  # Set the active profile to 'local' for this job
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Pulls the latest code from GitHub
+        uses: actions/checkout@v3
 
       - name: Set up JDK 21 (Amazon Corretto)
-        uses: actions/setup-java@v3  # Sets up Java
+        uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'  # Amazon Corretto JDK
-          java-version: '21'  # Version 21 (latest)
+          distribution: 'corretto'
+          java-version: '21'
+
+      - name: Set environment variable for Spring profile
+        run: echo "SPRING_PROFILES_ACTIVE=local" >> $GITHUB_ENV
 
       - name: Verify Java Version
-        run: java -version  # Prints Java version to verify setup
+        run: java -version
 
       - name: Build with Maven
-        run: mvn clean package  # Compiles and packages the project
+        run: mvn clean package
 
-      - name: Run tests
-        run: mvn test  # Runs unit tests
+      - name: Run tests with debug logs
+        run: mvn -X test
