--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -1,33 +1,33 @@
-name: Java CI/CD Pipeline
+name: Java CI/CD Pipeline  # Name of the pipeline
 
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - main  # Runs when code is pushed to 'main' branch
+  pull_request:  # Runs when a pull request is created
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Runs on a fresh Ubuntu machine
+
+    env:
+      SPRING_PROFILES_ACTIVE: local  # Set the active profile to 'local' for this job
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Pulls the latest code from GitHub
 
       - name: Set up JDK 21 (Amazon Corretto)
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v3  # Sets up Java
         with:
-          distribution: 'corretto'
-          java-version: '21'
-
-      - name: Set environment variable for Spring profile
-        run: echo "SPRING_PROFILES_ACTIVE=local" >> $GITHUB_ENV
+          distribution: 'corretto'  # Amazon Corretto JDK
+          java-version: '21'  # Version 21 (latest)
 
       - name: Verify Java Version
-        run: java -version
+        run: java -version  # Prints Java version to verify setup
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package  # Compiles and packages the project
 
-      - name: Run tests with debug logs
-        run: mvn -X test
+      - name: Run tests
+        run: mvn test  # Runs unit tests
